--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   firebase_core: ^2.0.0
   cloud_firestore: ^4.14.0
+  flutter_date_pickers: ^0.4.3
 
 dev_dependencies:
   flutter_test:
