--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.0.0
   cloud_firestore: ^4.14.0
   flutter_date_pickers: ^0.4.3
+  url_launcher: ^6.3.0
 
 
 dev_dependencies:
