--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   flutter_date_pickers: ^0.4.3
   url_launcher: ^6.3.0
+  google_fonts: ^6.2.1
 
 
 dev_dependencies:
