Continuando Atualizando UI do Usuario, Mudando para ver o grid de tons na escolha do tom da musica

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/profile.png
     - assets/hq720.jpg
     - assets/hq720 (1).jpg
+    - assets/logo.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
