--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   pitchupdart: ^0.0.2
   flutter_audio_capture: ^1.1.4
   permission_handler: ^10.1.0
+  audioplayers: ^5.2.1
 
 
 dev_dependencies:
