Tirnado erro de heroTag no floatingbutton nov ver letra, e tambem cikciandi dropbox para alterarv eclodiade do audio do player

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     - assets/hq720 (1).jpg
     - assets/logo.jpg
     - assets/click.mp3
+    - assets/redentor.mp3
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
