Reformando o UI da tela do admin,

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,8 @@ flutter:
     - assets/logo.jpg
     - assets/click.mp3
     - assets/redentor.mp3
+    - assets/keyboard.png
+    - assets/guitarra.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
