--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -9,6 +9,11 @@
   <string>sms</string>
   <string>tel</string>
 </array>
+<key>NSAppTransportSecurity</key>
+	<dict>
+	<key>NSAllowsArbitraryLoads</key>
+	<true/>
+	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>App needs access to the photo library to upload profile pictures.</string>
 	<key>NSCameraUsageDescription</key>
