--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   dio: 
   image_picker: ^0.8.5+3
   shared_preferences: ^2.3.2
+  flutter_email_sender: ^6.0.3
+  mailer: ^6.2.0
 
 
 
