--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
 
   pitch_detector_dart: ^0.0.2
   pitchupdart: ^0.0.2
-  flutter_audio_capture: ^1.1.4
+  #flutter_audio_capture: ^1.1.4
   permission_handler: ^10.1.0
   audioplayers: ^5.2.1
 
@@ -56,7 +56,7 @@ dependencies:
   shared_preferences: ^2.3.2
   flutter_email_sender: ^6.0.3
   mailer: ^6.3.0
-  flutter_mailer: ^2.1.2
+#  flutter_mailer: ^2.1.2 // Na versao de jdk, gradle, flutter, isso ano funciona
 
 
 
