Novo Ui de Login feito, e tudo funcionando

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ flutter:
     - assets/hq720.jpg
     - assets/hq720 (1).jpg
     - assets/logo.jpg
+    - assets/logo.png
     - assets/click.mp3
     - assets/redentor.mp3
     - assets/keyboard.png
