--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   flutter_email_sender: ^6.0.3
   mailer: ^6.3.0
   rxdart: ^0.27.0
+  firebase_messaging: ^14.7.10
+  flutter_local_notifications: ^18.0.1
 #  flutter_mailer: ^2.1.2 // Na versao de jdk, gradle, flutter, isso ano funciona
 
 
