--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,10 @@ dependencies:
   rxdart: ^0.27.0
   firebase_messaging: ^14.7.10
   flutter_local_notifications: ^18.0.1
+  flutter_colorpicker: ^1.1.0
+  photo_view: ^0.15.0
+  table_calendar: ^3.1.3
+  flutter_animate: ^4.5.2
 #  flutter_mailer: ^2.1.2 // Na versao de jdk, gradle, flutter, isso ano funciona
 
 
